@@ -416,31 +416,31 @@ keyname;
 static keyname FkeyName[] =
 {
   { fc::Fckey_at                  , "Ctrl+@" },
-  { fc::Fckey_a                   , "Ctrl+a" },
-  { fc::Fckey_b                   , "Ctrl+b" },
-  { fc::Fckey_c                   , "Ctrl+c" },
-  { fc::Fckey_d                   , "Ctrl+d" },
-  { fc::Fckey_e                   , "Ctrl+e" },
-  { fc::Fckey_f                   , "Ctrl+f" },
-  { fc::Fckey_g                   , "Ctrl+g" },
-  { fc::Fkey_erase                , "Backspace" }, // Ctrl+h
-  { fc::Fkey_tab                  , "Tab" },       // Ctrl+i
-  { fc::Fckey_h                   , "Ctrl+k" },
-  { fc::Fckey_l                   , "Ctrl+l" },
-  { fc::Fkey_return               , "Return" },    // Ctrl+m
-  { fc::Fckey_n                   , "Ctrl+n" },
-  { fc::Fckey_o                   , "Ctrl+o" },
-  { fc::Fckey_p                   , "Ctrl+p" },
-  { fc::Fckey_q                   , "Ctrl+q" },
-  { fc::Fckey_r                   , "Ctrl+r" },
-  { fc::Fckey_s                   , "Ctrl+s" },
-  { fc::Fckey_t                   , "Ctrl+t" },
-  { fc::Fckey_u                   , "Ctrl+u" },
-  { fc::Fckey_v                   , "Ctrl+v" },
-  { fc::Fckey_w                   , "Ctrl+w" },
-  { fc::Fckey_x                   , "Ctrl+x" },
-  { fc::Fckey_y                   , "Ctrl+y" },
-  { fc::Fckey_z                   , "Ctrl+t" },
+  { fc::Fckey_a                   , "Ctrl+A" },
+  { fc::Fckey_b                   , "Ctrl+B" },
+  { fc::Fckey_c                   , "Ctrl+C" },
+  { fc::Fckey_d                   , "Ctrl+D" },
+  { fc::Fckey_e                   , "Ctrl+E" },
+  { fc::Fckey_f                   , "Ctrl+F" },
+  { fc::Fckey_g                   , "Ctrl+G" },
+  { fc::Fkey_erase                , "Backspace" }, // Ctrl+H
+  { fc::Fkey_tab                  , "Tab" },       // Ctrl+I
+  { fc::Fckey_h                   , "Ctrl+K" },
+  { fc::Fckey_l                   , "Ctrl+L" },
+  { fc::Fkey_return               , "Return" },    // Ctrl+M
+  { fc::Fckey_n                   , "Ctrl+N" },
+  { fc::Fckey_o                   , "Ctrl+O" },
+  { fc::Fckey_p                   , "Ctrl+P" },
+  { fc::Fckey_q                   , "Ctrl+Q" },
+  { fc::Fckey_r                   , "Ctrl+R" },
+  { fc::Fckey_s                   , "Ctrl+S" },
+  { fc::Fckey_t                   , "Ctrl+T" },
+  { fc::Fckey_u                   , "Ctrl+U" },
+  { fc::Fckey_v                   , "Ctrl+V" },
+  { fc::Fckey_w                   , "Ctrl+W" },
+  { fc::Fckey_x                   , "Ctrl+X" },
+  { fc::Fckey_y                   , "Ctrl+Y" },
+  { fc::Fckey_z                   , "Ctrl+Z" },
   { fc::Fkey_escape               , "Esc" },       // Ctrl+[
   { fc::Fckey_backslash           , "Ctrl+\\" },
   { fc::Fckey_right_square_bracket, "Ctrl+]" },
